working on compatibility

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Snowy Shop Scene</title>
   <link rel="stylesheet" href="dist/stylesheets/main.css" media="screen" title="no title" charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
